# MailSender

./: README.md  main.py  pyproject.toml
api/: __init__.py
api/sender/: schemas.py  sender.py  utils.py  views.py
core/: settings.py
